poprawa get user teams